--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="primaryContainer">#00468A</color>
     <color name="onPrimaryContainer">#D6E3FF</color>
     <color name="secondary">#BDC7DC</color>
-    <color name="onSecondary">#273141</color>
+    <color name="onSecondary">#BCBDBD</color>
     <color name="secondaryContainer">#3E4758</color>
     <color name="onSecondaryContainer">#D9E3F8</color>
     <color name="tertiary">#DCBCE1</color>
