--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,10 @@
 <resources>
+    <style name="Theme.MySplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/background</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_splash</item>
+<!--        <item name="splashScreenIconSize">100dp</item>-->
+        <item name="postSplashScreenTheme">@style/Theme.SakhCastTV</item>
+    </style>
 
     <style name="Theme.SakhCastTV" parent="Theme.AppCompat.DayNight.NoActionBar" />
 </resources>
